test/sema/typeck/tuple/return-wrong-type.dora
fn f(a: (Int32, Bool)): (Int32, Float32) { return a; }
